[ADD] default versions

--- a/shared.env
+++ b/shared.env
@@ -3,3 +3,5 @@ WAFT_PYTHON_VERSION=python3
 WAFT_SFOIL_SOURCE=git@sfithub.com:sunflowerit/sfoil
 WAFT_SFOIL_BRANCH=master
 SFOIL_GITAGGREGATOR_VERSION=git+https://github.com/janverb/git-aggregator@therp-patches#egg=git-aggregator
+ODOO_VERSION=12.0
+DEPTH_MERGE=100
