--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,12 @@
-.vscode
-**.pyc
-*.pyo
-common/entrypoint
-common/build
-custom/src/*
-!custom/src/private
-custom/src/private/*
+*
+
+!auto/addons/.gitkeep
+!common/build.d/.gitkeep
+!common/conf.d/.gitkeep
+!common/entrypoint.d/.gitkeep
 !custom/src/private/.gitkeep
 !custom/src/addons.yaml
 !custom/src/repos.yaml
-auto/*
-!auto/addons
-auto/addons/*
-!auto/addons/.gitkeep
-odoo-variables
-logfile
-qa/*
-!qa/artifacts
-qa/artifacts/*
-!qa/artifacts/.gitkeep
-!qa/insider
-.env
-.venv
-Pipfile.lock
+!.gitignore
+!bootstrap
+!README.md
