--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,7 @@ custom/src/*
 !custom/src/.gitkeep
 !custom/src/addons.yaml
 !custom/src/repos.yaml
-Pipfile.lock
-.pyenv
-pipenv
+datadir
 .slide
 migrate-backup
 migrate-logfiles
