--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-.venv/
-waftlib/
-auto/
-logfile/
-.env
-.env-secret
-.venv
+auto
 common/conf.d/test-odoo.cfg
 custom/src/*
 !custom/src/.gitkeep
 !custom/src/addons.yaml
 !custom/src/repos.yaml
 datadir
-.slide
+.env
+.env-secret
+logfile
 migrate-backup
 migrate-logfiles
 migrate-temporary
+.pyenv
+.slide
+.venv
+waftlib
