--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
-auto
-common/conf.d/test-odoo.cfg
-custom/src/*
-!custom/src/.gitkeep
-!custom/src/addons.yaml
-!custom/src/repos.yaml
+
 datadir
 .env
 .env-secret
-logfile
-migrate-backup
-migrate-logfiles
-migrate-temporary
+.ignore
+logfiles
+odoo-code
 *.pyc
-.pyenv
+*.pyo
 .slide
 .venv
-waftlib
+.venv*
+.vscode
