--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,26 @@ logfile
 migrate-backup
 migrate-logfiles
 migrate-temporary
+migration/*/auto
+migration/*/common/conf.d/test-odoo.cfg
+migration/*/custom/src/*
+!migration/*/custom/src/.gitkeep
+!migration/*/custom/src/addons.yaml
+!migration/*/custom/src/repos.yaml
+migration/*/datadir
+migration/*/.env
+migration/*/.env-secret
+migration/*/logfile
+migration/*/migrate-backup
+migration/*/migrate-logfiles
+migration/*/migrate-temporary
+migration/*/progress.json
+migration/*/*.pyc
+migration/*/.pyenv
+migration/*/.slide
+migration/*/.venv
+migration/*/waftlib
+progress.json
 *.pyc
 .pyenv
 .slide
